# cubrif

./: CMakeLists.txt  brif.cu  brif.h  cubrif_main.cpp  pycubrif.cpp
cubrif/: cubrif.py
